fix bug's and add scrollbar
1. fix creating new note from "about app" page
2. make save note button disabled in "about app" page
3. add scrollbar in toolbar

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Global */
 /* ------------------------------------ */
 .container {
@@ -423,6 +422,11 @@ a {
 .header__btn--save:active {
   opacity: 0.8;
 }
+.header__btn--save:disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
 .header__btn--menu {
   background-color: var(--tg-theme-text-color, #1F1E1F);
 }
@@ -610,11 +614,7 @@ a {
   overflow-x: auto;
   text-wrap: nowrap;
   flex-wrap: nowrap;
-  -ms-overflow-style: none; /* IE и Edge */
-  scrollbar-width: none; /* Firefox */
-}
-.ql-horizontal::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
+  padding-bottom: 10px;
 }
 
 .ql-form-block {
